<resources>
    <string name="app_name">Cyber Taxi</string>
    <string name="label_login_phone_input_description">Enter your phone number to login or register</string>
    <string name="hint_phone_input">XX-XXX-XX-XX</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="button_next">Next</string>
    <string name="message_registration_success_status"><![CDATA[You successfully registered!\n Now you can link any card and use our application for your needs!]]></string>
    <string name="label_code_input_description">Enter the code we\'ve sent by SMS to the number: \%s</string>
    <string name="label_not_received_code">Haven’t receive the SMS?</string>
    <string name="button_resend_code">Resend code</string>
    <string name="message_profile_edit">Fill the data about yourself</string>
    <string name="label_firstname_input_description">Your first name</string>
    <string name="label_second_name_input_description">Your second name</string>
    <string name="label_birthday_input_description">Your birthday</string>
    <string name="title_trip_variant">Trip variant</string>
    <string name="title_recent_trips">Recent trips</string>
</resources>