<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_logo"
        style="@style/TextStyle.Logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/text_input_description"
        style="@style/TextStyle.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_phone_input_description"
        app:layout_constraintBottom_toTopOf="@id/phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:hint="@string/hint_phone_input"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_description" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:text="@string/button_next"
        app:layout_constraintBottom_toTopOf="@id/policy_chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/policy_chain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_vertical_margin"
        app:constraint_referenced_ids="terms_conditions,privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/terms_conditions"
        style="@style/ActiveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions" />

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/ActiveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy" />

</androidx.constraintlayout.widget.ConstraintLayout>